--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -26,11 +26,13 @@
                     <div class="ncl-grouped-buttons">
                         <button type="button" class="test-version-button"
                                 data-ng-click="$ctrl.invokeFunction()"
-`                               data-ng-class="{'disabled' : !$ctrl.isFunctionDeployed || !$ctrl.selectedFunctionEvent}">
+                                data-ng-disabled="!$ctrl.isFunctionDeployed || !$ctrl.selectedFunctionEvent"
+                                data-ng-class="{'disabled': !$ctrl.isFunctionDeployed || !$ctrl.selectedFunctionEvent}">
                             TEST
                         </button>
                         <button type="button" class="test-version-button-arrow dropdown-toggle" data-toggle="dropdown"
-                                data-ng-class="{'disabled' : !$ctrl.isFunctionDeployed}"
+                                data-ng-disabled="!$ctrl.isFunctionDeployed"
+                                data-ng-class="{'disabled': !$ctrl.isFunctionDeployed}"
                                 aria-haspopup="true"
                                 aria-expanded="false">
                             <span class="igz-icon-dropdown"></span>
@@ -63,132 +65,111 @@
         </div>
     </igz-info-page-actions-bar>
 
-    <div class="file-pane-viewport"
-         data-ui-layout="{ flow: 'row', disableToggle: true, dividerSize: 5 }">
-        <div ui-layout-container
-             data-size="100px"
-             data-ng-if="$ctrl.isTestResultShown || $ctrl.isDeployResultShown">
-            <div class="igz-scrollable-container"
-                 data-ng-scrollbars
-                 data-ng-scrollbars-config="$ctrl.scrollConfig">
-                <div data-ng-if="$ctrl.isDeployResultShown"
-                     class="ncl-edit-version-execution-result deploy-result"
-                     data-ng-class="{'in-progress': $ctrl.checkValidDeployState(),
-                                     'failed'     : $ctrl.deployResult.status.state === 'error'}">
-                    <div>
-                        <div class="btn-close igz-icon-close"
-                             data-ng-if="!$ctrl.checkValidDeployState()"
-                             data-ng-click="$ctrl.toggleDeployResult()"></div>
-                        <div class="icon-collapsed general-content"
-                             data-ng-class="$ctrl.rowIsCollapsed.deployBlock ? 'igz-icon-right' : 'igz-icon-down'"
-                             data-ng-click="$ctrl.onRowCollapse('deployBlock')"></div>
-                        <div class="ncl-execution-result-status"
-                             data-ng-class="{'succeeded'  : $ctrl.deployResult.status.state === 'ready',
-                                             'in-progress': $ctrl.checkValidDeployState(),
-                                             'collapsed'  : $ctrl.rowIsCollapsed.deployBlock}">
-                        <span class="result-status-icon"
-                              data-ng-class="{'igz-icon-tick-round': $ctrl.deployResult.status.state === 'ready',
-                                              'igz-icon-properties': $ctrl.checkValidDeployState(),
-                                              'igz-icon-block'     : $ctrl.deployResult.status.state === 'error'}"></span>
-                            {{$ctrl.getDeployStatusState($ctrl.deployResult.status.state)}}
-                        </div>
-                        <div class="ncl-execution-result-block collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.deployBlock">
-                            <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('deployBody')"
-                                 data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.deployBody}">
-                            <span class="icon-collapsed"
-                                  data-ng-class="$ctrl.rowIsCollapsed.deployBody ? 'igz-icon-right' : 'igz-icon-down'"></span>
-                                Logs
-                            </div>
-                            <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.deployBody">
-                                <div class="value-row log-panel igz-scrollable-container"
-                                     data-ng-scrollbars
-                                     data-ng-scrollbars-config="$ctrl.loggerScrollConfig"
-                                     data-ng-if="$ctrl.deployResult.status.logs"
-                                     data-ng-class="{'in-progress': $ctrl.checkValidDeployState(),
-                                                     'failed'     : $ctrl.deployResult.status.state === 'error'}">
-                                    <div class="log-entry" data-ng-repeat="log in $ctrl.deployResult.status.logs track by $index">
-                                        <span class="log-entry-time">[{{log.time | date:'HH:mm:ss.sss'}}]</span>
-                                        <span class="log-entry-level-{{log.level}}">&nbsp;({{$ctrl.getLogLevel(log.level)}})</span>
-                                        <span class="log-entry-message">&nbsp;{{log.message}}</span>
-                                        <span class="log-entry-error" data-ng-if="log.err">&nbsp;{{log.err}}</span>
-                                        <span class="log-entry-params">&nbsp;{{$ctrl.getLogParams(log)}}</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div data-ng-if="$ctrl.isTestResultShown"
-                     class="ncl-edit-version-execution-result">
-                    <div>
-                        <div class="btn-close igz-icon-close" data-ng-click="$ctrl.toggleTestResult()"></div>
-
-                        <div class="ncl-execution-result-status"
-                             data-ng-class="{'succeeded': $ctrl.isInvocationSuccess}">
-                        <span class="result-status-icon"
-                              data-ng-class="$ctrl.isInvocationSuccess ? 'igz-icon-tick-round' : 'igz-icon-block'">
-                        </span>
-                            Execution results: {{$ctrl.testResult.status.state}}
-                        </div>
-
-                        <div class="ncl-execution-result-block">
-                            <div class="collapsed-block-title"
-                                 data-ng-click="$ctrl.onRowCollapse('statusCode')"
-                                 data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.statusCode}">
-                            <span class="icon-collapsed"
-                                  data-ng-class="$ctrl.rowIsCollapsed.statusCode ? 'igz-icon-right' : 'igz-icon-down'">
-                            </span>
-                                Status code
-                            </div>
-                            <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.statusCode">
-                                <div class="value-row">
-                                    {{$ctrl.testResult.status.code}}
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="ncl-execution-result-block">
-                            <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('headers')"
-                                 data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.headers}">
-                            <span class="icon-collapsed"
-                                  data-ng-class="$ctrl.rowIsCollapsed.headers ? 'igz-icon-right' : 'igz-icon-down'">
-                            </span>
-                                Headers
-                            </div>
-                            <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.headers">
-                                <div class="label-value-row" data-ng-repeat="(headerName, headerValue) in $ctrl.testResult.headers">
-                                    <div class="label-cell">{{headerName}}</div>
-                                    <div class="value-cell">{{headerValue}}</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="ncl-execution-result-block">
-                            <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('body')"
-                                 data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.body}">
-                            <span class="icon-collapsed"
-                                  data-ng-class="$ctrl.rowIsCollapsed.body ? 'igz-icon-right' : 'igz-icon-down'">
-                            </span>
-                                Body
-                            </div>
-                            <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.body">
-                                <div class="value-row">
-                                    {{$ctrl.testResult.body}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div data-ng-if="$ctrl.isDeployResultShown"
+         class="ncl-edit-version-execution-result deploy-result"
+         data-ng-class="{'in-progress': $ctrl.checkValidDeployState(),
+                         'failed'     : $ctrl.deployResult.status.state === 'error'}">
+        <div class="btn-close igz-icon-close"
+             data-ng-if="!$ctrl.checkValidDeployState()"
+             data-ng-click="$ctrl.toggleDeployResult()"></div>
+        <div class="icon-collapsed general-content"
+             data-ng-class="$ctrl.rowIsCollapsed.deployBlock ? 'igz-icon-right' : 'igz-icon-down'"
+             data-ng-click="$ctrl.onRowCollapse('deployBlock')"></div>
+        <div class="ncl-execution-result-status"
+             data-ng-class="{'succeeded'  : $ctrl.deployResult.status.state === 'ready',
+                             'in-progress': $ctrl.checkValidDeployState(),
+                             'collapsed'  : $ctrl.rowIsCollapsed.deployBlock}">
+        <span class="result-status-icon"
+              data-ng-class="{'igz-icon-tick-round': $ctrl.deployResult.status.state === 'ready',
+                              'igz-icon-properties': $ctrl.checkValidDeployState(),
+                              'igz-icon-block'     : $ctrl.deployResult.status.state === 'error'}"></span>
+            {{$ctrl.getDeployStatusState($ctrl.deployResult.status.state)}}
         </div>
-        <div ui-layout-container="central">
-            <div class="igz-scrollable-container"
+        <div class="ncl-execution-result-block collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.deployBlock">
+            <div class="collapsed-block-title without-collapse">Logs</div>
+            <div class="log-panel igz-scrollable-container"
                  data-ng-scrollbars
-                 data-ng-scrollbars-config="$ctrl.scrollConfig">
-                <ncl-navigation-tabs class="igz-component" data-tab-items="$ctrl.navigationTabsConfig"></ncl-navigation-tabs>
-                <section class="ncl-edit-version-view" data-igz-extend-background data-ui-view="version"></section>
+                 data-ng-scrollbars-config="$ctrl.loggerScrollConfig"
+                 data-ng-class="{'in-progress': $ctrl.checkValidDeployState(),
+                                 'failed'     : $ctrl.deployResult.status.state === 'error'}">
+                <div class="log-entry" data-ng-repeat="log in $ctrl.deployResult.status.logs track by $index">
+                    <span class="log-entry-time">[{{log.time | date:'HH:mm:ss.sss'}}]</span>
+                    <span class="log-entry-level-{{log.level}}">&nbsp;({{$ctrl.getLogLevel(log.level)}})</span>
+                    <span class="log-entry-message">&nbsp;{{log.message}}</span>
+                    <span class="log-entry-error" data-ng-if="log.err">&nbsp;{{log.err}}</span>
+                    <span class="log-entry-params">&nbsp;{{$ctrl.getLogParams(log)}}</span>
+                </div>
             </div>
         </div>
     </div>
+
+    <div data-ng-if="$ctrl.isTestResultShown"
+         class="ncl-edit-version-execution-result">
+        <div class="igz-scrollable-container"
+             data-ng-scrollbars
+             data-ng-scrollbars-config="$ctrl.scrollConfig">
+            <div class="btn-close igz-icon-close" data-ng-click="$ctrl.toggleTestResult()"></div>
+
+            <div class="ncl-execution-result-status"
+                 data-ng-class="{'succeeded': $ctrl.isInvocationSuccess}">
+            <span class="result-status-icon"
+                  data-ng-class="$ctrl.isInvocationSuccess ? 'igz-icon-tick-round' : 'igz-icon-block'">
+            </span>
+                Execution results: {{$ctrl.testResult.status.statusText}}
+            </div>
+
+            <div class="ncl-execution-result-block">
+                <div class="collapsed-block-title"
+                     data-ng-click="$ctrl.onRowCollapse('statusCode')"
+                     data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.statusCode}">
+                <span class="icon-collapsed"
+                      data-ng-class="$ctrl.rowIsCollapsed.statusCode ? 'igz-icon-right' : 'igz-icon-down'">
+                </span>
+                    Status
+                </div>
+                <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.statusCode">
+                    <div class="value-row">
+                        {{$ctrl.testResult.status.statusCode}} {{$ctrl.testResult.status.statusText}}
+                    </div>
+                </div>
+            </div>
+
+            <div class="ncl-execution-result-block">
+                <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('headers')"
+                     data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.headers}">
+                <span class="icon-collapsed"
+                      data-ng-class="$ctrl.rowIsCollapsed.headers ? 'igz-icon-right' : 'igz-icon-down'">
+                </span>
+                    Headers
+                </div>
+                <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.headers">
+                    <div class="label-value-row" data-ng-repeat="(headerName, headerValue) in $ctrl.testResult.headers">
+                        <div class="label-cell">{{headerName}}</div>
+                        <div class="value-cell">{{headerValue}}</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ncl-execution-result-block">
+                <div class="collapsed-block-title" data-ng-click="$ctrl.onRowCollapse('body')"
+                     data-ng-class="{'collapsed': $ctrl.rowIsCollapsed.body}">
+                <span class="icon-collapsed"
+                      data-ng-class="$ctrl.rowIsCollapsed.body ? 'igz-icon-right' : 'igz-icon-down'">
+                </span>
+                    Body
+                </div>
+                <div class="collapsed-block-content-wrapper" data-collapse="$ctrl.rowIsCollapsed.body">
+                    <div class="value-row" data-ng-if="$ctrl.testResult.body">
+                        {{$ctrl.testResult.body}}
+                    </div>
+                    <div class="value-row" data-ng-if="!$ctrl.testResult.body">
+                        Empty body
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <ncl-navigation-tabs class="igz-component" data-tab-items="$ctrl.navigationTabsConfig"></ncl-navigation-tabs>
+    <section class="ncl-edit-version-view" data-igz-extend-background data-ui-view="version"></section>
 </div>
