--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -10,7 +10,8 @@
             <label for="enable" class="checkbox-inline">Enabled</label>
         </div>
         <div class="row">
-            <div class="namespace-block">
+            <div class="namespace-block"
+                 data-ng-class="{'full-width': !$ctrl.isDemoMode()}">
                 <div class="label">
                     Namespace
                 </div>
