--- a/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-template/function-from-template.tpl.html
@@ -30,7 +30,8 @@
         </div>
         <div class="bottom-bar">
             <button class="ncl-secondary-button" data-ng-click="$ctrl.cancelCreating($event)">CANCEL</button>
-            <button class="ncl-primary-button" data-ng-click="$ctrl.createFunction()">CREATE FUNCTION</button>
+            <button class="ncl-primary-button" data-ng-click="$ctrl.createFunction()"
+                    data-ng-class="{'disabled': !$ctrl.isCreateFunctionAllowed}">CREATE FUNCTION</button>
         </div>
     </div>
 </div>
