--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -10,7 +10,8 @@
             <div class="field-wrapper">
                 <div class="field-label">Name</div>
                 <div class="field-content">
-                    <igz-validating-input-field data-field-type="input"
+                    <igz-validating-input-field class="nuclio-validating-input"
+                                                data-field-type="input"
                                                 data-input-name="displayName"
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-input-value="$ctrl.workingCopy.spec.displayName"
@@ -35,7 +36,8 @@
             <div class="field-wrapper">
                 <div class="field-label">Path</div>
                 <div class="field-content">
-                    <igz-validating-input-field data-field-type="input"
+                    <igz-validating-input-field class="nuclio-validating-input"
+                                                data-field-type="input"
                                                 data-input-name="x-nuclio-path"
                                                 data-input-model-options="$ctrl.inputModelOptions"
                                                 data-input-value="$ctrl.workingCopy.spec.attributes.headers['x-nuclio-path']"
