--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -15,7 +15,8 @@
                 <div class="label">
                     Namespace
                 </div>
-                <igz-validating-input-field data-field-type="input"
+                <igz-validating-input-field class="nuclio-validating-input"
+                                            data-field-type="input"
                                             data-input-name="namespace"
                                             data-input-value="$ctrl.version.metadata.namespace"
                                             data-is-focused="false"
@@ -36,7 +37,8 @@
                 </div>
                 <div class="timeout-values">
                     <div class="inputs">
-                        <igz-validating-input-field data-field-type="input"
+                        <igz-validating-input-field class="nuclio-validating-input"
+                                                    data-field-type="input"
                                                     data-input-name="min"
                                                     data-input-value="$ctrl.timeout.min"
                                                     data-is-focused="false"
@@ -50,7 +52,8 @@
                         <div class="values-label">
                             min
                         </div>
-                        <igz-validating-input-field data-field-type="input"
+                        <igz-validating-input-field class="nuclio-validating-input"
+                                                    data-field-type="input"
                                                     data-input-name="sec"
                                                     data-input-value="$ctrl.timeout.sec"
                                                     data-is-focused="false"
@@ -73,7 +76,8 @@
                 <div class="label">
                     Description
                 </div>
-                <igz-validating-input-field data-field-type="input"
+                <igz-validating-input-field class="nuclio-validating-input"
+                                            data-field-type="input"
                                             data-input-name="description"
                                             data-input-value="$ctrl.version.spec.description"
                                             data-is-focused="false"
