--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build-dialog/version-configuration-build-dialog.tpl.html
@@ -12,7 +12,8 @@
             <div class="field-label">
                 Remote path
             </div>
-            <igz-validating-input-field data-field-type="input"
+            <igz-validating-input-field class="nuclio-validating-input"
+                                        data-field-type="input"
                                         data-placeholder-text="Type path..."></igz-validating-input-field>
         </div>
     </form>
