--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -28,7 +28,7 @@
                                             data-placeholder-text="Type ..."
                                             data-update-data-callback="$ctrl.inputValueCallback(newData)"
                                             data-update-data-field="Commands"
-                                            class="build-command-field">
+                                            class="nuclio-validating-input build-command-field">
                 </igz-validating-input-field>
             </div>
             <div class="igz-col-100 build-field files-field">
