--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.tpl.html
@@ -10,7 +10,8 @@
             </div>
             <div class="arguments-input">
                 <span class="label">Arguments</span>
-                <igz-validating-input-field data-field-type="input"
+                <igz-validating-input-field class="nuclio-validating-input"
+                                            data-field-type="input"
                                             data-input-name="arguments"
                                             data-input-value="$ctrl.data.arguments"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
