--- a/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
+++ b/src/nuclio/projects/project/functions/create-function/function-from-scratch/function-from-scratch.tpl.html
@@ -8,7 +8,8 @@
             <div class="function-name-wrapper">
                 <div class="function-name">
                     <span class="input-label">Name*</span>
-                    <igz-validating-input-field data-field-type="input"
+                    <igz-validating-input-field class="nuclio-validating-input"
+                                                data-field-type="input"
                                                 data-input-name="name"
                                                 data-input-value="$ctrl.functionData.metadata.name"
                                                 data-validation-is-required="true"
