--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
@@ -14,7 +14,8 @@
                 </div>
                 <div class="logger-input">
                     <span class="label">Logger destination</span>
-                    <igz-validating-input-field data-field-type="input"
+                    <igz-validating-input-field class="nuclio-validating-input"
+                                                data-field-type="input"
                                                 data-input-name="arguments"
                                                 data-input-value="$ctrl.version.spec.loggerSinks[0].sink"
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
