--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -68,11 +68,11 @@
                  class="code-edit-section">
                 <div class="code-editor-drop-zone"></div>
                 <ncl-monaco class="monaco-code-editor"
-                            data-function-source-code="$ctrl.version.spec.build.functionSourceCode"
+                            data-function-source-code="$ctrl.sourceCode"
                             data-mini-monaco="false"
                             data-selected-theme="$ctrl.selectedTheme.id"
                             data-language="$ctrl.selectedRuntime.language"
-                            data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode)"></ncl-monaco>
+                            data-on-change-source-code-callback="$ctrl.onChangeSourceCode(sourceCode, language)"></ncl-monaco>
             </div>
         </div>
     </div>
